add auth using passport-jwt
