# src/controllers/v1/userController.ts
@@ -1,4 +1,4 @@
-import { Controller, Get, Path, Post, Route } from 'tsoa';
+import { Controller, Get, Middlewares, Path, Post, Route, Security } from 'tsoa';
 import { UserResponse } from '../../dto';
 import { HttpResponse } from '../../common/types/http';
 import { StatusCodes } from 'http-status-codes';
@@ -6,6 +6,8 @@ import { UserService } from '../../services';
 import { UserSerializer } from '../../serializer';
 import { UserRequest, UserRequestType } from '../../schema/user.schema';
 import { Body, ValidateBody } from '../../decorator';
+import { checkUserPermissionMiddleware } from '../../middleware/checkUserPermission';
+import { RoleEnum } from '../../common/enum/RoleEnum';
 
 @Route('users')
 export class UserController extends Controller {
@@ -23,6 +25,13 @@ export class UserController extends Controller {
     }
 
     @Get('{userId}')
+    @Security('bearerAuth')
+    @Middlewares(
+        checkUserPermissionMiddleware({
+            type: 'role',
+            values: [RoleEnum.ADMIN],
+        }),
+    )
     public async getUser(@Path() userId: number): Promise<HttpResponse<UserResponse>> {
         const user = await UserService.getOne(userId);
 
