# src/dto/auth.ts
@@ -1,0 +1,15 @@
+import { Expose } from 'class-transformer';
+
+export class LoginResponse {
+    @Expose()
+    email: number;
+
+    @Expose()
+    username: string;
+
+    @Expose()
+    accessToken: string;
+
+    @Expose()
+    refreshToken: string;
+}
